# CodeSnoop

./: .gitignore  AsciiView.tres  HexView.tres  README.md  TerminalBox.tres  gdnative.gdns  msobj140-msvcrt.lib  project.godot  scratch.txt
GDNative/: CMakeLists.txt  TextHistory  TextHistory.cpp  gdlibrary.cpp  library.cpp  library.h  shell_handler.cpp  shell_handler.h
GDNative/dynzasm/: disas.c  disas.h  lex.c  lex.h
GDNative/dynzasm/arch/x86/: x86load.c
assets/: btns.clip
async/: AsyncButton.gd  AsyncButton.tscn  AsyncShell.gd  AsyncShell.tscn  Spinner.tscn
fonts/: CoreKeeper.tres  RobotoMono-Regular.tres  basis33.tres  basis33_ascii_spaced.tres  pixelmix.tres  silkscr.tres
scenes/: BtnRecentFile.tscn  Main.tscn
scripts/: BtnRecentFile.gd  ChunkDataTable.gd  LogBox.gd  Terminal.gd  VScrollBarInput.gd  VSliderInput.gd  console.gd  main.gd
scripts/autoloads/: Cursor.gd  DataStruct.gd  Debugger.gd  GDN.gd  GDNShell.gd  IO.gd  Log.gd  PE.gd  Settings.gd  Shell.gd  Stopwatch.gd
scripts/classes/: DataFile.gd  GlobalScope.gd
